--- a/app/src/main/res/layout/activity_input2.xml
+++ b/app/src/main/res/layout/activity_input2.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tvIrts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:text="Harta yang Siap dibagi (Al - Irts) :"
             android:textAppearance="@style/TextAppearance.AppCompat" />
@@ -22,7 +22,7 @@
             android:id="@+id/tvNominal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:text="Rp. 1.000.000"
             android:textAppearance="@style/TextAppearance.AppCompat" />
 
@@ -36,10 +36,19 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Pewaris"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:orientation="vertical">
 
@@ -69,7 +78,7 @@
             android:id="@+id/cbSuami"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="Suami"
             android:textSize="18sp" />
@@ -78,7 +87,7 @@
             android:id="@+id/tvIstri"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="Istri"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -88,16 +97,18 @@
             android:id="@+id/etIstri"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:hint="@string/hint_et_jml"
+            android:inputType="number"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
         <TextView
             android:id="@+id/tvAnakLk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="Anak Laki-laki"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -107,16 +118,18 @@
             android:id="@+id/etAnakLk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:hint="@string/hint_et_jml"
+            android:inputType="number"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
         <TextView
             android:id="@+id/tvAnakPr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="Anak Perempuan"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -126,10 +139,12 @@
             android:id="@+id/etAnakPr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:hint="@string/hint_et_jml"
+            android:inputType="number"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
     </LinearLayout>
 
@@ -141,8 +156,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/prev2" />
 
     <Button
@@ -153,8 +168,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/next2" />
 
 </RelativeLayout>
