--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:weightSum="4"
-    tools:context="id.zakafikry.ewaris.IntroActivity.IntroActivity">
+    tools:context="id.zakafikry.ewaris.Introduction.IntroActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
                 style="@style/TextAppearance.AppCompat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="    Daftar"
+                android:text="     Daftar"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -94,7 +94,7 @@
                 style="@style/TextAppearance.AppCompat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ahli Waris"
+                android:text="  Ahli Waris"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -120,7 +120,7 @@
                 style="@style/TextAppearance.AppCompat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="     Pohon"
+                android:text="      Pohon"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -128,7 +128,7 @@
                 style="@style/TextAppearance.AppCompat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="   Keluarga"
+                android:text="    Keluarga"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
