--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.zakafikry.ewaris.AboutActivity">
+    tools:context="id.zakafikry.ewaris.Misc.AboutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +73,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="8dp"
-            android:text="Ibu Hartatik, ST, M.Cs" />
+            android:text="My Supervisor Ibu Hartatik, ST, M.Cs" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="8dp"
+            android:text="All My Comrades" />
 
 
     </LinearLayout>
