--- a/app/src/main/res/layout/activity_ftree.xml
+++ b/app/src/main/res/layout/activity_ftree.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
-    tools:context="id.zakafikry.ewaris.IntroActivity.FTreeActivity">
+    tools:context="id.zakafikry.ewaris.Introduction.FTreeActivity">
 
     <ImageView
         android:id="@+id/imageFtree"
