--- a/app/src/main/res/layout/activity_input8.xml
+++ b/app/src/main/res/layout/activity_input8.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="id.zakafikry.ewaris.InputActivity.InputActivity8">
+    tools:context="id.zakafikry.ewaris.Input.InputActivity8">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:text="Paman"
+            android:text="Paman Pewaris"
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -27,8 +27,8 @@
             android:id="@+id/tvNotifPaman"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="32dp"
             android:text="Paman kandung dan Paman se-kakek dilewati karena sudah terhalang(mahjub) oleh Keponakan laki-laki"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -40,7 +40,7 @@
             android:id="@+id/tvPamanKd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="Paman Kandung"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -50,9 +50,10 @@
             android:id="@+id/etPamanKd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
+            android:hint="@string/hint_et_jml"
             android:inputType="number"
             android:textAppearance="@style/TextAppearance.AppCompat" />
 
@@ -60,7 +61,7 @@
             android:id="@+id/tvPamanSa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="Paman seKakek"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -70,9 +71,10 @@
             android:id="@+id/etPamanSa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
+            android:hint="@string/hint_et_jml"
             android:inputType="number"
             android:textAppearance="@style/TextAppearance.AppCompat" />
 
@@ -86,8 +88,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/prev2" />
 
     <Button
@@ -98,8 +100,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/next2" />
 
 </RelativeLayout>
